{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 377,
  "lineage": "c3a777e9-82e6-97d5-979b-4a7b0f94fccc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076f1bb8fe52b9ec0",
            "association_id": "eipassoc-09eb0ba62b392bf79",
            "domain": "vpc",
            "id": "eipalloc-076f1bb8fe52b9ec0",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-024d498af74099564",
            "private_dns": "ip-10-0-1-93.eu-central-1.compute.internal",
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-52-59-115-240.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.59.115.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform_eip_AZ1"
            },
            "tags_all": {
              "Name": "terraform_eip_AZ1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077644329d9110fff",
            "association_id": "eipassoc-0b9d7ee309a93394f",
            "domain": "vpc",
            "id": "eipalloc-077644329d9110fff",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0305df218aa6f11bd",
            "private_dns": "ip-10-0-6-168.eu-central-1.compute.internal",
            "private_ip": "10.0.6.168",
            "public_dns": "ec2-3-120-71-23.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.120.71.23",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform_eip_AZ2"
            },
            "tags_all": {
              "Name": "terraform_eip_AZ2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:102806069279:internet-gateway/igw-032008a2799da85a1",
            "id": "igw-032008a2799da85a1",
            "owner_id": "102806069279",
            "tags": {
              "Name": "terraform-igw"
            },
            "tags_all": {
              "Name": "terraform-igw"
            },
            "vpc_id": "vpc-0fc04a96c2e1be031"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076f1bb8fe52b9ec0",
            "connectivity_type": "public",
            "id": "nat-03821a278683aa58f",
            "network_interface_id": "eni-024d498af74099564",
            "private_ip": "10.0.1.93",
            "public_ip": "52.59.115.240",
            "subnet_id": "subnet-0675322650f89ddab",
            "tags": {
              "Name": "terraform-public-nat-AZ1"
            },
            "tags_all": {
              "Name": "terraform-public-nat-AZ1"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077644329d9110fff",
            "connectivity_type": "public",
            "id": "nat-0594fb759bdb14fca",
            "network_interface_id": "eni-0305df218aa6f11bd",
            "private_ip": "10.0.6.168",
            "public_ip": "3.120.71.23",
            "subnet_id": "subnet-03d22e37506688be7",
            "tags": {
              "Name": "terraform-public-nat-AZ2"
            },
            "tags_all": {
              "Name": "terraform-public-nat-AZ2"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:102806069279:route-table/rtb-0fc35f9b5da77abef",
            "id": "rtb-0fc35f9b5da77abef",
            "owner_id": "102806069279",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03821a278683aa58f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-private_AZ1"
            },
            "tags_all": {
              "Name": "terraform-private_AZ1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc04a96c2e1be031"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.public-nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:102806069279:route-table/rtb-0613f9e2f67ec625b",
            "id": "rtb-0613f9e2f67ec625b",
            "owner_id": "102806069279",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0594fb759bdb14fca",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-private_AZ2"
            },
            "tags_all": {
              "Name": "terraform-private_AZ2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc04a96c2e1be031"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.public-nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:102806069279:route-table/rtb-0045521611f587e77",
            "id": "rtb-0045521611f587e77",
            "owner_id": "102806069279",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032008a2799da85a1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-public"
            },
            "tags_all": {
              "Name": "terraform-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc04a96c2e1be031"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_subnet.public",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_RT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b39a8755126bd57c",
            "route_table_id": "rtb-0fc35f9b5da77abef",
            "subnet_id": "subnet-0bfde0f832c9dcc09"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.public-nat",
            "aws_route_table.private-RT",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0856f66125691fcb8",
            "route_table_id": "rtb-0613f9e2f67ec625b",
            "subnet_id": "subnet-00432bbf14586609c"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.public-nat",
            "aws_route_table.private-RT",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_RT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a46e64b49ea89403",
            "route_table_id": "rtb-0045521611f587e77",
            "subnet_id": "subnet-0675322650f89ddab"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.public-RT",
            "aws_subnet.public",
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cd4d0a1a03a3ef5",
            "route_table_id": "rtb-0045521611f587e77",
            "subnet_id": "subnet-03d22e37506688be7"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.public-RT",
            "aws_subnet.public",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:102806069279:security-group/sg-05d160907da49b3fb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d160907da49b3fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20221215062131683500000001",
            "name_prefix": "terraform-",
            "owner_id": "102806069279",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-security-group"
            },
            "tags_all": {
              "Name": "terraform-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc04a96c2e1be031"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "AZ1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:102806069279:subnet/subnet-0bfde0f832c9dcc09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfde0f832c9dcc09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "102806069279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-private-AZ1"
            },
            "tags_all": {
              "Name": "terraform-private-AZ1"
            },
            "vpc_id": "vpc-0fc04a96c2e1be031"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": "AZ2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:102806069279:subnet/subnet-00432bbf14586609c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00432bbf14586609c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "102806069279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-private-AZ2"
            },
            "tags_all": {
              "Name": "terraform-private-AZ2"
            },
            "vpc_id": "vpc-0fc04a96c2e1be031"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "AZ1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:102806069279:subnet/subnet-0675322650f89ddab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0675322650f89ddab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "102806069279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-public-AZ1"
            },
            "tags_all": {
              "Name": "terraform-public-AZ1"
            },
            "vpc_id": "vpc-0fc04a96c2e1be031"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        },
        {
          "index_key": "AZ2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:102806069279:subnet/subnet-03d22e37506688be7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d22e37506688be7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "102806069279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-public-AZ2"
            },
            "tags_all": {
              "Name": "terraform-public-AZ2"
            },
            "vpc_id": "vpc-0fc04a96c2e1be031"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:102806069279:vpc/vpc-0fc04a96c2e1be031",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06de297b9545987f4",
            "default_route_table_id": "rtb-07b52de0fd2bfe4f2",
            "default_security_group_id": "sg-00e8203f362cef6ab",
            "dhcp_options_id": "dopt-0cf91d200fe95e2fc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fc04a96c2e1be031",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b52de0fd2bfe4f2",
            "owner_id": "102806069279",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}